--- a/style.css
+++ b/style.css
@@ -1,7 +1,15 @@
 html {
   font-size: 10px;
-  background: url('https://i.imgur.com/b9r5sEL.jpg') bottom center;
-  background-size: cover;
+}
+
+iframe {
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  left: 0;
+  top: 0;
+  border: none;
+  z-index: -1;
 }
 
 body,html {
@@ -24,7 +32,7 @@ body,html {
   margin: 1rem;
   font-size: 1.5rem;
   padding: 1rem .5rem;
-  transition: all .1s ease;
+  transition: all .07s ease;
   width: 10rem;
   text-align: center;
   color: white;
