--- a/style.css
+++ b/style.css
@@ -27,8 +27,8 @@ body,html {
 }
 
 .key {
-  border: .4rem solid black;
-  border-radius: .5rem;
+  border: .4rem solid #444;
+  border-radius: .8rem;
   margin: 1rem;
   font-size: 1.5rem;
   padding: 1rem .5rem;
